@@ -1,6 +1,9 @@
 2012-05-29  Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-sel.8.pre.in: Fix typo.
+
+	* common/toolcommon/tool-config-file-common.c: Fix parsing for
+	target-slave-address.
 	
 2012-05-29  Albert Chu <chu11@llnl.gov>
 
